Add patch for format string bug in xscreensaver-text
https://bugs.launchpad.net/bugs/781948

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ xscreensaver (5.15-4) UNRELEASED; urgency=low
   * Build with -D_FILE_OFFSET_BITS=64 to fix inode number overflow
     when accessing image files on cifs file systems (LP: #609451)
     (thanks Mamoru Tasaka)
+  * debian/patches/12_upstream_format_string_hardening.patch:
+    Fix format string glitch in xscreensaver-text (LP: #781948)
+    (thanks Emanuel Bronshtein)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sat, 28 Jul 2012 11:25:47 +0200
 
