--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ xscreensaver (5.15-4) UNRELEASED; urgency=low
 
   * debian/rules: Drop unnecessary dh_testroot from clean target
     (thanks Julien Cristau)
+  * debian/rules: Include buildflags.mk for hardening options
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sat, 28 Jul 2012 11:25:47 +0200
 
