--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ xscreensaver (5.15-4) UNRELEASED; urgency=low
   * debian/patches/12_upstream_format_string_hardening.patch:
     Fix format string glitch in xscreensaver-text (LP: #781948)
     (thanks Emanuel Bronshtein)
+  * Stop xscreensaver in prerm instead of postrm (Closes: 681613)
+    (thanks Filipus Klutiero)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sat, 28 Jul 2012 11:25:47 +0200
 
