--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ xscreensaver (5.15-4) UNRELEASED; urgency=low
     (thanks Filipus Klutiero)
   * New xscreensaver daemon wrapper used by the example .desktop file
     to determine correct "New login" command.
+  * debian/copyright: Updated to comply with accepted standard
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sat, 28 Jul 2012 11:25:47 +0200
 
