--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ xscreensaver (5.15-4) UNRELEASED; urgency=low
     to determine correct "New login" command.
   * debian/copyright: Updated to comply with accepted standard
   * debian/control: Make short descriptions more consistent
+  * debian/control: Migrate Conflicts: to Breaks:
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sat, 28 Jul 2012 11:25:47 +0200
 
