--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+xscreensaver (5.19-1) UNRELEASED; urgency=low
+
+  * New upstream release 5.19, changes since 5.15:
+    - Made pipes be ridiculously less efficient, but spin
+    - Added better mouse control to rubik, cube21, crackberg, and julia
+    - Cosmetic improvements to queens and endgame
+    - sonar can now ping local subnet on DHCP
+    - Most savers now resize/rotate properly
+    - Enlarged the texture image for lament
+
+ -- Tormod Volden <debian.tormod@gmail.com>  Sat, 28 Jul 2012 18:36:33 +0200
+
 xscreensaver (5.15-4) UNRELEASED; urgency=low
 
   * debian/rules: Drop unnecessary dh_testroot from clean target
