--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ xscreensaver (5.20-1) UNRELEASED; urgency=low
   * Drop 12_upstream_format_string_hardening.patch (applied upstream)
   * debian/patches: Split up 53_XScreenSaver.ad.in.patch into
     logically separated and better named patches
+  * debian/patches/57_grabDesktopImages_default_off.patch:
+    Do not reveal desktop content by default (Closes: #679974)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Wed, 17 Oct 2012 21:52:41 +0200
 
