Add texture width patch for quasicrystal
Also move it from xscreensaver-gl-extra to xscreensaver-gl
now that it behaves well on most hardware.

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,8 @@ xscreensaver (5.22-1) UNRELEASED; urgency=low
   * debian/patches/57_grabDesktopImages_default_off.patch:
     Do not reveal desktop content by default (Closes: #679974)
   * Bump Standards-Version to 3.9.4 (no changes needed)
+  * debian/patches/12_upstream_quasicrystal_texture_width.patch:
+    Adjust texture width to graphics card/driver capability
 
  -- Tormod Volden <debian.tormod@gmail.com>  Thu, 07 Feb 2013 21:29:31 +0100
 
