--- a/debian/changelog
+++ b/debian/changelog
@@ -34,9 +34,11 @@ xscreensaver (5.22-1) UNRELEASED; urgency=low
     logically separated and better named patches
   * debian/patches/57_grabDesktopImages_default_off.patch:
     Do not reveal desktop content by default (Closes: #679974)
-  * Bump Standards-Version to 3.9.4 (no changes needed)
   * debian/patches/12_upstream_quasicrystal_texture_width.patch:
     Adjust texture width to graphics card/driver capability
+  * debian/patches/14_upstream_hexadrop_keyboard_exit.patch:
+    Allow keyboard exit when run standalone (from upstream)
+  * Bump Standards-Version to 3.9.4 (no changes needed)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Thu, 07 Feb 2013 21:29:31 +0100
 
