Add patch to speed up locking from suspend scripts
Some suspend infrastructures call xscreensaver-command --lock
but puts the computer to sleep before the screen is actually
locked. screensaver-command always waited a second before
activating the saver to avoid waking up from the key release
when the command is typed in, and this made the race condition
even worse.

This patch skips this wait if the command is not run from a tty.

https://bugs.launchpad.net/bugs/1229486

It does not solve the problem of racy suspend scripts though. They
should wait for the completion of the xscreensaver-command:

http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=593303

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ xscreensaver (5.22-1) unstable; urgency=low
     Adjust texture width to graphics card/driver capability
   * debian/patches/14_upstream_hexadrop_keyboard_exit.patch:
     Allow keyboard exit when run standalone (from upstream)
+  * debian/patches/15_upstream_activate_faster_nontty.patch:
+    Activate faster when not from tty session (LP: #1229486)
   * Bump Standards-Version to 3.9.4 (no changes needed)
   * debian/rules: Drop unnecessary dh_testroot from clean target
     (thanks Julien Cristau)
