Add patch to let CPPFLAGS take effect for hardening
Fixes a bazillion of Lintian and build log check hardening warnings.

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ xscreensaver (5.23-1) UNRELEASED; urgency=low
     - 12_upstream_quasicrystal_texture_width.patch
     - 14_upstream_hexadrop_keyboard_exit.patch
     - 15_upstream_activate_faster_nontty.patch
+  * debian/patches/12_upstream_use_cppflags.patch:
+    Make sure CPPFLAGS are used (fixes hardening warnings)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sat, 23 Nov 2013 16:18:48 +0100
 
