--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xscreensaver (5.23-1) UNRELEASED; urgency=low
+xscreensaver (5.23-1) unstable; urgency=low
 
   * New upstream release 5.23 (Closes: #729311)
     - New hack, geodesic
@@ -18,7 +18,7 @@ xscreensaver (5.23-1) UNRELEASED; urgency=low
     Make sure CPPFLAGS are used (fixes hardening warnings)
   * debian/control: Update VCS fields (fixes Lintian warning)
 
- -- Tormod Volden <debian.tormod@gmail.com>  Sat, 23 Nov 2013 16:18:48 +0100
+ -- Tormod Volden <debian.tormod@gmail.com>  Sat, 23 Nov 2013 20:47:28 +0100
 
 xscreensaver (5.22-1) unstable; urgency=low
 
