--- a/README
+++ b/README
@@ -38,6 +38,9 @@ XScreenSaver has an extensive manual -- please read it!
 
 ===============================================================================
 
+5.28	* Fixed some compilation problems and intermittent crashes.
+        * Turned off the OSX 10.6 enable_gc hack. It didn't work.
+
 5.27	* New hacks, `tessellimage' and `projectiveplane'.
         * Added support for pthreads, because Dave Odell is a madman.
 	* Updated `webcollage' for recent changes.
