--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+xscreensaver (5.29-1) UNRELEASED; urgency=low
+
+  * New upstream release 5.29, changes since 5.26:
+    - New hacks, `tessellimage' and `projectiveplane'.
+    - Added support for pthreads, because Dave Odell is a madman.
+    - Updated `webcollage' for recent changes.
+    - X11: Don't assume Suspend = 0 implies "No DPMS".
+    - Minor updates to `boxed' and `klein'.
+    - Fixed possible crash in `apple2', `noseguy', `xmatrix', `shadebobs'.
+    - Plugged some leaks.
+    - Fixed some compilation problems and intermittent crashes.
+    - Updated `webcollage' for recent changes.
+
+ -- Tormod Volden <debian.tormod@gmail.com>  Mon, 11 Aug 2014 21:30:40 +0200
+
 xscreensaver (5.26-1) unstable; urgency=low
 
   * New upstream release 5.26, changes since 5.23:
