--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ xscreensaver (5.30-1) UNRELEASED; urgency=low
     - Reworked OpenGL fonts.
     - Various minor fixes.
   * Bump Standards-Version to 3.9.6 (no changes needed)
+  * debian/copyright: hacks/kumppa uses X11 license
 
  -- Tormod Volden <debian.tormod@gmail.com>  Tue, 07 Oct 2014 23:05:43 +0200
 
