--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xscreensaver (5.30-1) UNRELEASED; urgency=low
+xscreensaver (5.30-1) unstable; urgency=low
 
   * New upstream release 5.30
     - New hack, `winduprobot'.
