--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+xscreensaver (5.32-1) UNRELEASED; urgency=low
+
+  * New upstream release 5.32, changes since 5.30:
+    - New hacks, `geodesicgears', `binaryring' and `cityflow'.
+    - UTF-8 text support (instead of only Latin1) and antialiased text
+      on X11 with Xft (instead of only on OSX/iOS) in `fontglide',
+      `noseguy', `fliptext', `starwars', and `winduprobot'.
+      The other text-displaying hacks (`apple2', `phosphor', `xmatrix',
+      and `gltext') also now accept UTF-8 input, though they convert it
+      to Latin1 or ASCII.
+    - `glplanet' now has both day and night maps, and a sharp terminator.
+    - Fixed a transparency glitch in `winduprobot'.
+
+ -- Tormod Volden <debian.tormod@gmail.com>  Thu, 18 Jun 2015 21:57:50 +0200
+
 xscreensaver (5.30-1) unstable; urgency=low
 
   * New upstream release 5.30
