--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ xscreensaver (5.32-1) UNRELEASED; urgency=low
       to Latin1 or ASCII.
     - `glplanet' now has both day and night maps, and a sharp terminator.
     - Fixed a transparency glitch in `winduprobot'.
+  * xscreensaver.postrm: Remove obsolete suid and /usr/doc stuff
 
  -- Tormod Volden <debian.tormod@gmail.com>  Thu, 18 Jun 2015 21:57:50 +0200
 
