Do not overwrite /etc/X11/app-defaults/XScreenSaver, bug #767019
Picked from Bastien's debdiff in the bug report, plus update
of the link if xscreensaver-gl is installed after xscreensaver.

Fixes the issue 99.9%, leaving only the corner case of user linking
to XScreenSaver-nogl while xscreensaver-gl is installed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,10 @@ xscreensaver (5.32-1) UNRELEASED; urgency=low
       to Latin1 or ASCII.
     - `glplanet' now has both day and night maps, and a sharp terminator.
     - Fixed a transparency glitch in `winduprobot'.
-  * xscreensaver*.postrm/postinst/preinst: Remove obsolete parts
+  * xscreensaver*.postrm/postinst/preinst: Remove obsolete parts used in
+    lenny->squeeze and potato->woody transitions
+  * Do not overwrite user-configured /etc/X11/app-defaults/XScreenSaver
+    Thanks to Bastien Roucariès for initial patch (Closes: #767019)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Thu, 18 Jun 2015 21:57:50 +0200
 
