--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ xscreensaver (5.33-1) UNRELEASED; urgency=low
     lenny->squeeze and potato->woody transitions
   * Do not overwrite user-configured /etc/X11/app-defaults/XScreenSaver
     Thanks to Bastien Roucariès for initial patch (Closes: #767019)
+  * Replace GNOME with MATE in desktop files stub (Closes: #766880)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 19 Jul 2015 11:50:31 +0200
 
