Hardcode app-defaults dir for configure
If /etc/X11/app-defaults is not already existing on the build
machine, configure will otherwise pick another location.

We need to know the location when we manipulate the links to
the app-defaults files from the maintainer scripts.

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ xscreensaver (5.33-1) UNRELEASED; urgency=low
     Thanks to Alexander Gerasiov for patch (Closes: #778470)
   * debian/control: Recommend libgnomeui-0 package for xscreensaver-demo
     Thanks to Michael Gilbert for patch (Closes: #661174)
+  * debian/rules: Hardcode app-defaults dir for configure
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 19 Jul 2015 11:50:31 +0200
 
