--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xscreensaver (5.34-2) UNRELEASED; urgency=medium
+
+  * Fix sort order in hacks/Makefile (for reproducible builds)
+    (Closes: #819595)
+
+ -- Tormod Volden <debian.tormod@gmail.com>  Tue, 05 Apr 2016 22:53:13 +0200
+
 xscreensaver (5.34-1) unstable; urgency=medium
 
   * New upstream release 5.34
