Add patch to fix FTBFS on GNU/Hurd

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
 xscreensaver (5.34-3) UNRELEASED; urgency=medium
 
   * Replace dependencies on libjpeg-progs with libjpeg-turbo-progs
-    (Closes: 813395)
+    (Closes: #813395)
+  * debian/patches/12_upstream_hurd-no-pthread_stack_min.patch:
+    Do not check for PTHREAD_STACK_MIN on GNU/Hurd (Closes: #823049)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Thu, 07 Apr 2016 22:28:44 +0200
 
