--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ xscreensaver (5.35-1) UNRELEASED; urgency=medium
   * Bump debhelper compatibility version to 9
   * debian/patches/20_hacks_maze_xpm_libs.patch: Deleted (obsolete)
   * Add patch descriptions (and some bug references) to all patches
+  * debian/rules: Enable all hardening options
 
  -- Tormod Volden <debian.tormod@gmail.com>  Thu, 07 Apr 2016 22:28:44 +0200
 
