Add closer for bug #876087

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ xscreensaver (5.39-1) UNRELEASED; urgency=medium
       terrible selection of installed fonts.
     - Try harder to find sensible fonts for the password dialog.
     - Various bug fixes.
+    - Added 6502/dmsc source (Closes: #876087)
   * debian/xscreensaver.install.stub: Locale 'ca' dropped upstream
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 23 Jul 2017 19:15:54 +0200
