Drop recommends on libgnomeui, bug #885731
This might bring back bug #661174 on older systems,
but the resulting warning seems harmless.

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,10 +18,11 @@ xscreensaver (5.39-1) UNRELEASED; urgency=medium
     - Various bug fixes.
     - Added 6502/dmsc source (Closes: #876087)
   * debian/xscreensaver.install.stub: Locale 'ca' dropped upstream
-  * debian/rules: Stop if intltool-update fails (Closes: 873108)
-  * Allow cross-compilation (Closes: 873106) thanks Helmut Grohne!
+  * debian/rules: Stop if intltool-update fails (Closes: #873108)
+  * Allow cross-compilation (Closes: #873106) thanks Helmut Grohne!
   * debian/patches/92_hacks_images_distclean.patch:
     Missing distclean in new, non-generated Makefile
+  * Drop recommends on libgnomeui (Closes: #885731)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 23 Jul 2017 19:15:54 +0200
 
